# CPlusPlus

Assignment_1/Assignment_1_code/: CMakeLists.txt  Menu.cpp  Menu.h  Text.cpp  Text.h  main.cpp
Assignment_2/A2_40014877/: Point4D.cpp  Point4D.h  test_Point4D.cpp
Assignment_2/A2_40014877/README.rtfd/: TXT.rtf
Assignment_3/A3_40014877/: CMakeLists.txt  LineManager.cpp  LineManager.h  Menu.cpp  Menu.h  MiniDB.h  README.txt  funcpp.txt  main.cpp  maincpp.txt  output.txt
Assignment_4/A4_40014877/: AcuteTriangle.cpp  AcuteTriangle.h  CMakeLists.txt  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  RightTriangle.h  Shape.cpp  Shape.h  SlotMachine.cpp  SlotMachine.h  Triangle.cpp  Triangle.h  main.cpp
Assignment_5/Asg5/: a5_source_code.txt
Assignment_5/Asg5/A5_40014877/: Dog.cpp  Dog.h  README.txt  dogDB.csv  dogDB2.csv  main.cpp
