cmake_minimum_required(VERSION 3.16)
project(A4_40014877)

set(CMAKE_CXX_STANDARD 14)

add_executable(A4_40014877 main.cpp Shape.cpp Shape.h Rectangle.cpp Rectangle.h Rhombus.cpp Rhombus.h Triangle.cpp Triangle.h RightTriangle.cpp RightTriangle.h AcuteTriangle.cpp AcuteTriangle.h SlotMachine.cpp SlotMachine.h)